<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="tarun0.com.callallower.EditBlacklistActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_edit_blacklist" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu_labels_right"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/desc_fab_menu"
        fab:menu_labels_ellipsize="end"
        fab:menu_labels_singleLine="true"
        fab:menu_backgroundColor="@color/fab_bg_color"
        fab:menu_labels_position="left">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/add_contact_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            android:contentDescription="@string/desc_fab_add_contact"
            fab:fab_size="mini"
            fab:fab_label="@string/fab_add_contact_label"
            app:fab_showAnimation="@anim/show_right_to_left"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/delete_all_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            android:contentDescription="@string/desc_fab_remove_all"
            fab:fab_size="mini"
            fab:fab_label="@string/fab_remove_all_label"
            app:fab_showAnimation="@anim/show_right_to_left"/>

    </com.github.clans.fab.FloatingActionMenu>

</android.support.design.widget.CoordinatorLayout>
